# vcpkg-rs

./: Cargo.toml
src/: config.rs  error.rs  lib.rs  library.rs  pc_file.rs  port.rs  target_triplet.rs  vcpkg_target.rs
src/env_vars/: cargo.rs  mod.rs  vcpkg_rs.rs
src/pc_file/: mod.rs  pc_file.rs  pc_files.rs
src/target_triplet/: arch.rs  mod.rs  rustc_support_tier.rs  sub.rs
