[package]
name = "vcpkg"
version = "0.2.15"
authors = ["Jim McGrath <jimmc2@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mcgoo/vcpkg-rs"
readme = "README.md"
documentation = "https://docs.rs/vcpkg"
description = """
A library to find native dependencies in a vcpkg tree at build
time in order to be used in Cargo build scripts.
"""
keywords = ["build-dependencies", "windows", "macos", "linux"]
categories = ["development-tools::build-utils"]

[features]
# This feature enables llvm names of target triplet components, can be eventually used for extension
# and for possible use in conjunction with Custom Target feature
semver_exempt_llvm_ttc = []

[dependencies]

[dev-dependencies]
tempdir = "0.3.7"
lazy_static = "1"

